updated README files

--- a/README.Rmd
+++ b/README.Rmd
@@ -8,7 +8,7 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## Scripts for processing phylotranscriptomic data
+## Scripts for analyzing phylotranscriptomic data
 
 ### Data QC
 
