--- a/README.Rmd
+++ b/README.Rmd
@@ -12,14 +12,16 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ### R scripts
 
-  - `R-scripts/check-monophyly.R`: check gene trees for monophyly of Thalassiosirales and raphid pennates
+  - `check-monophyly.R`: check gene trees for monophyly of Thalassiosirales and raphid pennates
 
-  - `R-scripts/plot-busco-omark.R`: plot BUSCO and OMArk completeness
+  - `Densi.mod.R`: implementation of DensiTree-style function to draw a cloud of diversification histories across a set of phylogenetic trees
   
-  - `R-scripts/trees-ordination-and-consensus.R`: NMDS ordination of species trees
+  - `Part2_plotMultiMisse.R`: plot the DensiTree-style results
+
+  - `plot-busco-omark.R`: plot BUSCO and OMArk completeness
+
+  - `trees-ordination-and-consensus.R`: NMDS ordination of species trees
   
-
-
 ### Data QC
 
 `compare_md5sum.pl`: compares two files with pre- and post-download md5sum values
